--- a/Shared/VisualizerWindow.xaml
+++ b/Shared/VisualizerWindow.xaml
@@ -1,4 +1,4 @@
 ﻿<Window x:Class="ParseTreeVisualizer.VisualizerWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:my="clr-namespace:ParseTreeVisualizer" 
         HorizontalAlignment="Center" VerticalAlignment="Center" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
-    <my:VisualizerControl />
+    <my:VisualizerControl Margin="12" />
 </Window>
