--- a/Shared/VisualizerControl.xaml
+++ b/Shared/VisualizerControl.xaml
@@ -1,4 +1,6 @@
-﻿<DockPanel x:Class="ParseTreeVisualizer.VisualizerControl" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:my="clr-namespace:ParseTreeVisualizer" xmlns:my1="clr-namespace:ParseTreeVisualizer.Util" xmlns:ag="clr-namespace:WpfAutoGrid">
+﻿<DockPanel x:Class="ParseTreeVisualizer.VisualizerControl" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+           xmlns:my="clr-namespace:ParseTreeVisualizer" xmlns:my1="clr-namespace:ParseTreeVisualizer.Util" 
+           xmlns:ag="clr-namespace:WpfAutoGrid">
     <FrameworkElement.Resources>
         <my1:RootConverter x:Key="RootConverter" />
         <my1:NullConverter x:Key="NullConverter" />
@@ -78,20 +80,23 @@
                 <Popup Name="configPopup" AllowsTransparency="True" Placement="Custom" PlacementTarget="{Binding ElementName=configButton}" StaysOpen="False">
                     <Border Background="White" BorderBrush="Black" BorderThickness="1">
                         <StackPanel Orientation="Vertical">
+                            
                             <ag:AutoGrid Margin="6" ChildMargin="3" ChildVerticalAlignment="Center" ColumnCount="2">
                                 <TextBlock Background="White" Text="Parser class:" />
                                 <ComboBox Name="selectedParser" ItemsSource="{Binding DataContext.AvailableParsers, RelativeSource={RelativeSource AncestorType=my:VisualizerControl}}" SelectedValue="{Binding SelectedParserName}" SelectedValuePath="FullName" ItemTemplateSelector="{StaticResource ComboBoxTemplateSelector}" />
                             </ag:AutoGrid>
-
-                            <!--<GroupBox Header="Token list">
+                            
+                            <GroupBox Header="Token list">
                                 <StackPanel Orientation="Vertical">
-                                    <CheckBox>Show text tokens</CheckBox>
-                                    <CheckBox>Show .NET whitespace tokens</CheckBox>
-                                    <CheckBox>Show errors</CheckBox>
+                                    <CheckBox IsChecked="{Binding ShowTextTokens}">Show text tokens</CheckBox>
+                                    <CheckBox IsChecked="{Binding ShowWhitespaceTokens}">Show .NET whitespace tokens</CheckBox>
+                                    <CheckBox IsChecked="{Binding ShowErrorTokens}">Show errors</CheckBox>
                                     <TextBlock Text="Show token types" />
-                                    <ListBox MaxHeight="200" SelectedValuePath="ID"/>
+                                    <ListBox Name="lbSelectedTokenTypes" MaxHeight="200" SelectedValuePath="Key" DisplayMemberPath="Value" SelectionMode="Multiple"
+                                             ItemsSource="{Binding DataContext.TokenTypeMapping, RelativeSource={RelativeSource AncestorType=my:VisualizerControl}}" />
                                 </StackPanel>
-                            </GroupBox>-->
+                            </GroupBox>
+                            
                         </StackPanel>
                     </Border>
                 </Popup>
