Margins in settings popup; update README

--- a/Shared/VisualizerControl.xaml
+++ b/Shared/VisualizerControl.xaml
@@ -80,29 +80,46 @@
                 <TextBlock Text="&#9881;" />
                 <Popup Name="configPopup" AllowsTransparency="True" Placement="Custom" PlacementTarget="{Binding ElementName=configButton}" StaysOpen="False" DataContext="{x:Null}">
                     <Border Background="White" BorderBrush="Black" BorderThickness="1">
-                        <ag:AutoGrid ColumnCount="2">
-                            <StackPanel>
-                                <TextBlock Text="Token list" />
-                                <CheckBox IsChecked="{Binding ShowTextTokens}">Show text tokens</CheckBox>
-                                <CheckBox IsChecked="{Binding ShowWhitespaceTokens}">Show .NET whitespace tokens</CheckBox>
-                                <CheckBox IsChecked="{Binding ShowErrorTokens}">Show errors</CheckBox>
-                                <TextBlock Text="Show token types" />
-                                <ListBox Name="lbSelectedTokenTypes" MaxHeight="200" SelectedValuePath="Index" DisplayMemberPath="Text" SelectionMode="Multiple" ItemsSource="{Binding TokenTypes}">
-                                    <ListBox.ItemContainerStyle>
-                                        <Style TargetType="ListBoxItem">
-                                            <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-                                        </Style>
-                                    </ListBox.ItemContainerStyle>
-                                </ListBox>
+                        <UniformGrid Columns="3" Rows="1">
+                            <UniformGrid.Resources>
+                                <Style x:Key="GroupingLabel" TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                    <Setter Property="TextAlignment" Value="Center"/>
+                                    <Setter Property="FontWeight" Value="Bold"/>
+                                    <Setter Property="Margin" Value="0,0,0,15" />
+                                </Style>
+                            </UniformGrid.Resources>
+
+                            <StackPanel Margin="12">
+                                <TextBlock Text="General" Style="{StaticResource GroupingLabel}" />
+                                <TextBlock Text="Parser class:" Style="{StaticResource LabelStyle}"/>
+                                <ComboBox Name="selectedParser" ItemsSource="{Binding DataContext.AvailableParsers, RelativeSource={RelativeSource AncestorType=my:VisualizerControl}}" SelectedValue="{Binding SelectedParserName}" SelectedValuePath="FullName" ItemTemplateSelector="{StaticResource ComboBoxTemplateSelector}" />
                             </StackPanel>
-                            <StackPanel>
-                                <TextBlock Text="Parse tree" />
-                                <ag:AutoGrid Margin="6" ChildMargin="3" ChildVerticalAlignment="Center" ColumnCount="2">
-                                    <TextBlock Background="White" Text="Parser class:" />
-                                    <ComboBox Name="selectedParser" ItemsSource="{Binding DataContext.AvailableParsers, RelativeSource={RelativeSource AncestorType=my:VisualizerControl}}" SelectedValue="{Binding SelectedParserName}" SelectedValuePath="FullName" ItemTemplateSelector="{StaticResource ComboBoxTemplateSelector}" />
-                                </ag:AutoGrid>
-                            </StackPanel>
-                        </ag:AutoGrid>
+
+                            <Border BorderThickness="1,0,0,0" BorderBrush="Black">
+                                <StackPanel Margin="12">
+                                    <TextBlock Text="Token list" Style="{StaticResource GroupingLabel}" />
+                                    <CheckBox IsChecked="{Binding ShowTextTokens}">Show text tokens</CheckBox>
+                                    <CheckBox IsChecked="{Binding ShowWhitespaceTokens}" Margin="0,9,0,0">Show .NET whitespace tokens</CheckBox>
+                                    <CheckBox IsChecked="{Binding ShowErrorTokens}" Margin="0,9,0,0">Show errors</CheckBox>
+                                    <TextBlock Text="Filter token types:" Style="{StaticResource LabelStyle}" Margin="0,12,0,0" />
+                                    <ListBox Name="lbSelectedTokenTypes" MaxHeight="200" SelectedValuePath="Index" DisplayMemberPath="Text" SelectionMode="Multiple" ItemsSource="{Binding TokenTypes}" Margin="0,3,0,0">
+                                        <ListBox.ItemContainerStyle>
+                                            <Style TargetType="ListBoxItem">
+                                                <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+                                            </Style>
+                                        </ListBox.ItemContainerStyle>
+                                    </ListBox>
+                                </StackPanel>
+                            </Border>
+
+                            <Border BorderThickness="1,0,0,0"  BorderBrush="Black">
+                                <StackPanel Margin="12">
+                                    <TextBlock Text="Parse tree" Style="{StaticResource GroupingLabel}" />
+                                </StackPanel>
+                            </Border>
+
+                        </UniformGrid>
                     </Border>
                 </Popup>
             </StackPanel>
