Minor fixes; initial work on #8 (WIP)

--- a/Shared/VisualizerControl.xaml
+++ b/Shared/VisualizerControl.xaml
@@ -116,6 +116,7 @@
                             <Border BorderThickness="1,0,0,0"  BorderBrush="Black">
                                 <StackPanel Margin="12">
                                     <TextBlock Text="Parse tree" Style="{StaticResource GroupingLabel}" />
+                                    <CheckBox IsChecked="{Binding ShowTokenTreeNodes}" />
                                 </StackPanel>
                             </Border>
 
